name:                telegram-bot
version:             0.1.0.0
synopsis:            Telegram bot bindings
description:         Please see README.md
homepage:            http://github.com/bb010g/telegram-bot#readme
license:             AGPL-3
license-file:        LICENSE
author:              Brayden Banks
maintainer:          bb010g@gmail.com
copyright:           2015 Brayden Banks
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.TelegramBot
                     , Network.TelegramBot.Common
                     , Network.TelegramBot.Types
                     , Network.TelegramBot.Methods
                     , Network.TelegramBot.Files
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.4 && < 0.5
                     , either >= 4.4 && < 4.5
                     , unordered-containers >= 0.2 && < 0.3
                     , text >= 1.2 && < 1.3
                     , lens >= 4.13 && < 4.14
                     , lens-aeson >= 1.0 && < 1.1
                     , wreq >= 0.4 && < 0.5
                     , aeson >= 0.9 && < 0.10
                     , aeson-pretty >= 0.7 && < 0.8
                     , servant >= 0.4 && < 0.5
                     , servant-client >= 0.4 && < 0.5
                     , servant-server >= 0.4 && < 0.5
                     , resourcet >= 1.1 && < 1.2
                     , bytestring >= 0.10 && < 0.11
                     , wai >= 3.0 && < 3.1
                     , wai-extra >= 3.0 && < 3.1
                     , warp >= 3.1 && < 3.2
                     , constraints >= 0.4 && < 0.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bb010g/telegram-bot
